# waterbodies

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  compose.yaml  default.nix  environment.yaml  index_tiles.sh  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: create_new_tag.yml  publish_docker_image.yml  test.yml
alembic/: env.py
alembic/versions/: 39985970cb79_update_task_id_column.py  da96f386855c_add_task_id_column.py
conda/: environment.yaml
data/: coastal_tiles.parquet
docs/figures/: HistoricalExtentWorkflow.drawio  SurfaceAreaChangeWorkflow.drawio
notebooks/: ProcessTask.ipynb  RasterizeOceansSeasMask.ipynb  SplitHydroSHEDSv1.1LandMaskIntoTiles.ipynb
notebooks/GenerateTasks/: BacklogProcessing.ipynb  Gapfilling.ipynb  RegularUpdate.ipynb
notebooks/GenerateTiles/: BacklogProcessing.ipynb  Gapfilling.ipynb  RegularUpdate.ipynb
notebooks/GlobalOceansAndSeasv01/: IdentifyCoastalTiles.ipynb  RasterizeGlobalOceansAndSeasv01Mask.ipynb  RasterizeOceansSeasMask.ipynb  SplitGlobalOceansAndSeasv01MaskIntoTiles.ipynb  SplitOceanSeasMAskIntoTiles.ipynb  SplitOceanSeasMaskIntoTiles.ipynb
notebooks/HistoricalExtent/: RasterisePolygons.ipynb  TurnWaterObservationsIntoWaterbodyPolygons.ipynb
notebooks/HydroSHEDSv1.1LandMask/: SplitHydroSHEDSv1.1LandMaskIntoTiles.ipynb
notebooks/Land-SeaMask/: SplitHydroSHEDSv1.1LandMaskIntoTiles.ipynb
notebooks/SurfaceAreaChange/GenerateTasks/: BacklogProcessing.ipynb  GapFilling.ipynb
notebooks/SurfaceAreaChange/ProcessTasks/: BacklogProcessing.ipynb  GapFilling.ipynb
styling/: README.md  sld11-10.py  sld11-10.xsl
styling/sld_v1_0/: waterbodies_area_rules.sld  waterbodies_default_hashed.sld
styling/sld_v1_1/: waterbodies_area_rules.sld  waterbodies_default_hashed.sld
tests/: test_surface_area_change.py
tests/data/: x199_y035.tif
waterbodies/: __init__.py  db.py  db_models.py  db_utils.py  grid.py  historical_extent.py  hopper.py  io.py  logs.py  surface_area_change.py  text.py  utils.py
waterbodies/cli/: main.py
waterbodies/cli/historical_extent/: generate_tasks.py  main.py  process_polygons.py  process_tasks.py  rasterise_polygons.py  split_hydrosheds_land_mask.py
waterbodies/cli/surface_area_change/: generate_tasks.py  generate_tiles.py  main.py  process_task.py  process_tasks.py
