[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "waterbodies"
version = "0.0.1"
authors = [{name = "Digital Earth Africa", email = "systems@digitalearthafrica.org"}]
maintainers = [{name = "Digital Earth Africa", email = "systems@digitalearthafrica.org"}]
description = "DE Africa waterbodies"
readme =  {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.9"
dependencies = [
    "black[jupyter]",
    "click",
    "datacube",
    "flake8",
    "fsspec",
    "geoalchemy2",
    "geopandas",
    "isort >= 5.0.0",
    "mypy",
    "numpy ",
    "odc-dscache",
    "odc-geo",
    "odc-stats",
    "pandas",
    "python-dotenv",
    "rasterio",
    "rioxarray",
    "s3fs",
    "scikit-image",
    "sqlalchemy",
    "toolz",
    "tqdm",
    "xarray",

]

[project.urls]
Repository = "https://github.com/digitalearthafrica/waterbodies.git"
"Bug Tracker" = "https://github.com/digitalearthafrica/waterbodies/issues"

[tool.setuptools]
packages = ["waterbodies"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 100

[project.scripts]
waterbodies = "waterbodies.cli.main:waterbodies"